--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.2",
-    "aws-amplify": "^6.4.0",
+    "@aws-amplify/ui-react-storage": "^3.3.6",
+    "aws-amplify": "^6.6.4",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18"
